# bazel-example

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
backend/: BUILD.bazel  main.go  server.go
frontend/: BUILD.bazel  app.js
lambda/: BUILD.bazel  hello_world.go
proto/: BUILD.bazel  backend.proto
