###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "bazel-example",
    version = "1.0",
)
###########################
# Bazel repo dependencies #
###########################
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "aspect_rules_esbuild", version = "0.21.0")
bazel_dep(name = "aspect_rules_js", version = "2.1.2")
bazel_dep(name = "aspect_rules_ts", version = "3.3.2")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_android", version = "0.6.0")
bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_go", version = "0.51.0")
bazel_dep(name = "rules_multitool", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "1.7.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")

bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.40.0")
bazel_dep(name = "protobuf", version = "29.2")

###########################
#    Go Dependencies      #
###########################
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Examples of version pinning.
go_deps.module(
    path = "google.golang.org/protobuf",
    sum = "h1:yBPeRvTftaleIgM3PZ/WBIZ7XM/eEYAaEyCwvyjq/gk=",
    version = "v1.36.1",
)
go_deps.module(
    path = "github.com/aws/aws-xray-sdk-go",
    sum = "h1:A/Gc733PHvARkjcAk+fw+0k2RT3O4VSZ+x/3YvAREfc=",
    version = "v1.8.5",
)
use_repo(
    go_deps,
    "com_github_aws_aws_lambda_go",
    "com_github_aws_aws_xray_sdk_go",
    "org_golang_google_grpc",
    "com_github_google_uuid",
    "org_golang_google_protobuf",
)

# Pull a go image to use as a container base.
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "go_image_static",
    digest = "sha256:ebd8cc37d22551dce0957ba8e58f03b22a8448bbf844c8c9ded4feef883b36bc",
    image = "gcr.io/distroless/static",
)
use_repo(oci, "go_image_static")

###########################
#    Node Dependencies    #
###########################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:package.json",
    ],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")