load("@rules_go//proto:def.bzl", "go_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "backend_proto",
    srcs = [
        "backend.proto",
    ],
    deps = [],
)

go_proto_library(
    name = "backend_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/pearlsteinj/bazel-example/proto/backend",
    protos = [
        ":backend_proto",
    ],
    visibility = ["//visibility:public"],
)
